refactor: string.xml에서 형식 지정자 사용하게 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,8 @@
 
     <!-- activity_reservation_finished -->
     <string name="reservation_finished_notice">영화 상영 시작 시간 15분 전까지\n취소가 가능합니다.</string>
-    <string name="reservation_finished_general">일반</string>
-    <string name="reservation_finished_person">명</string>
-    <string name="reservation_finished_price_unit">원 (현장 결제)</string>
+    <string name="reservation_finished_number_of_tickets">일반 %d명</string>
+    <string name="reservation_finished_price">%s원 (현장 결제)</string>
 
     <!-- item_movie_catalog -->
     <string name="movie_catalog_reservation_now">지금 예매</string>
